# zefiro

./: Cargo.toml  README.md  cliff.toml  release.sh  typos.toml
.github/: mergify.yml
.github/workflows/: cd.yml  ci.yml
crates/zefiro-api/: Cargo.toml
crates/zefiro-controller/: Cargo.toml  README.md  pod.rs
crates/zefiro-controller/src/: main.rs  pod.rs
crates/zefiro-cwl/: Cargo.toml  README.md
crates/zefiro-cwl/src/: lib.rs
crates/zefiro-cwl/src/schema/: document.rs  types.rs  workflow.rs
crates/zefiro-cwl/src/values/: document.rs  types.rs
crates/zefiro-cwl/test_data/cwl/: wf-cycled-schema.yml  wf-schema.yml  wf-values.yml
crates/zefiro-job/: Cargo.toml  README.md  hello.yaml  inputs.json  job.yml  pod.yml  svc-nginx.yml
crates/zefiro-job/src/: builder.rs  lib.rs  main.rs  message.rs  priority.rs  resources.rs  service.rs  status.rs
crates/zefiro-kube/: Cargo.toml  README.md
crates/zefiro-kube-controller/: Cargo.toml  README.md
crates/zefiro-kube-controller/src/: job.rs  k8s.rs  main.rs  resources.rs
crates/zefiro-kube-service/: Cargo.toml  priority-classes.yml
crates/zefiro-kube-service/src/: main.rs  priority.rs  status.rs
crates/zefiro-kube/src/: builder.rs  main.rs  service.rs
crates/zefiro-kube/src/models/: mod.rs
crates/zefiro-pipeline/: Cargo.toml
crates/zefiro-pipeline/src/: main.rs  message.rs  service.rs
crates/zefiro-queue/: Cargo.toml
zefiro-cli/: Cargo.toml
zefiro-core/: Cargo.toml
zefiro-core/zefiro-core-cwl/: Cargo.toml  README.md
zefiro-core/zefiro-core-cwl/src/: lib.rs
zefiro-core/zefiro-core-cwl/src/js/: exec.rs
zefiro-core/zefiro-core-cwl/src/schema/: command_line_tool.rs  document.rs  mod.rs  wf.rs  workflow.rs
zefiro-core/zefiro-core-cwl/src/values/: document.rs
zefiro-core/zefiro-cwl/: Cargo.toml  README.md
zefiro-core/zefiro-cwl-js/: Cargo.toml
zefiro-core/zefiro-cwl-parser/: Cargo.toml  README.md
zefiro-core/zefiro-cwl-parser/examples/cwl/: clt-step-values.yml
zefiro-core/zefiro-cwl-parser/examples/data/: clt-step-schema.yml  clt-step-values.yml  wf-step-schema.yml  wf-step-values.yml
zefiro-core/zefiro-cwl-parser/src/: lib.rs  main.rs
zefiro-core/zefiro-cwl-parser/src/js/: engine.rs  exec.rs
zefiro-core/zefiro-cwl-parser/src/schema/: command_line_tool.rs  document.rs  mod.rs  requirements.rs  types.rs  workflow.rs
zefiro-core/zefiro-cwl-parser/src/values/: document.rs  mod.rs  types.rs
zefiro-core/zefiro-cwl/src/: lib.rs
zefiro-core/zefiro-cwl/src/exprs/: exec.rs
zefiro-core/zefiro-cwl/src/schema/: command_line_tool.rs  types.rs
zefiro-core/zefiro-cwl/src/template/: render.rs
zefiro-core/zefiro-cwl/src/values/: document.rs
zefiro-core/zefiro-cwl/test_data/cwl/: clt-step-values.yml
zefiro-pipeline-engine/: Cargo.toml
zefiro-pipeline-engine/zefiro-cwl-js/: Cargo.toml  README.md
zefiro-pipeline-engine/zefiro-cwl-js-exec/: Cargo.toml
zefiro-pipeline-engine/zefiro-cwl-js/src/: lib.rs
zefiro-pipeline-engine/zefiro-cwl-parser/: Cargo.toml
zefiro-pipeline-engine/zefiro-cwl-parser/src/values/: document.rs  types.rs
zefiro-pipeline/zefiro-cwl-parser/: Cargo.toml  README.md
zefiro-pipeline/zefiro-cwl-parser/src/: lib.rs
zefiro-pipeline/zefiro-cwl-parser/src/js/: exec.rs
zefiro-pipeline/zefiro-cwl-parser/src/schema/: document.rs  requirements.rs
zefiro-pipeline/zefiro-cwl-parser/src/values/: document.rs
zefiro-ui/: Cargo.toml
