[workspace]
members = [
    "crates/zefiro-cwl",
    "crates/zefiro-controller",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.135"
serde_with = "3.12.0"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = { version = "0.7.13", features = ["io"] }
rstest = "0.24.0"
