[package]
name = "zefiro-controller"
version = "0.0.0-pre"
edition = "2021"
rust-version = "1.83.0"

[dependencies]
anyhow = { workspace = true }
futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = "0.98.0"
schemars = "0.8.21"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = "0.3.19"
yaml-rust2 = "0.9.0"
nats = "0.25.0"

[dev-dependencies]
rstest = { workspace = true }