[package]
name = "zefiro-cwl"
version = "0.0.0-pre"
description = """
The Common Workflow Language (CWL) object model that used in `zefiro`.
"""
authors = ["The Zefiroproj Authors"]
categories = ["Serialization", "Deserialization", "Parsing"]
keywords = ["CWL", "CommandLineTool", "Workflow"]
edition = "2021"
homepage = "https://github.com/zefiroproj/zefiro/zefiro-core/zefiro-cwl"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/zefiroproj/zefiro"
rust-version = "1.83.0"

[dependencies]
anyhow = { workspace = true }
deno_core = "0.334.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
petgraph = { workspace = true }
sha1 = "0.10.6"
tera = "1.20.0"

[dev-dependencies]
rstest = { workspace = true }
tempfile = "3.15.0"
