[package]
name = "zefiro-job"
version = "0.0.0-pre"
edition = "2021"
rust-version = "1.83.0"

[dependencies]
anyhow = { workspace = true }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = "0.98.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
async-nats = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
