[package]
name = "zefiro-pipeline"
version = "0.0.0-pre"
edition = "2021"

[dependencies]
petgraph = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
zefiro-cwl = { version = "0.0.0-pre", path = "../zefiro-cwl" }
zefiro-job = { version = "0.0.0-pre", path = "../zefiro-job" }