[package]
name = "zefiro-cwl"
version = "0.0.0-pre"
description = """
The Common Workflow Language (CWL) object model that used in `zefiro`.
"""
authors = ["The Zefiroproj Authors"]
categories = ["Serialization", "Deserialization", "Parsing"]
keywords = ["CWL", "CommandLineTool", "Workflow"]
edition = "2021"
homepage = "https://github.com/zefiroproj/zefiro/zefiro-core/zefiro-cwl"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/zefiroproj/zefiro"
rust-version = "1.83.0"

[dependencies]
anyhow = "1.0.95"
deno_core = "0.332.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.135"
serde_with = "3.12.0"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
tera = "1.20.0"

[dev-dependencies]
rstest = "0.24.0"
tempfile = "3.15.0"
